#70: implement image duplication